--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
       <section class="section-portfolio">
        <div class="container">
         <h1 hidden>portfolio</h1>
-       <ul class="portfolio-list-button">
+       <ul class="list portfolio-list-button">
         <li>
             <button style="cursor: pointer" type="button" class="button-list button-portfolio">
               All
@@ -75,7 +75,7 @@
         <ul class="list section-list">
           <li class="li-portfolio">
             <a class="link portfolio-link" style="display: block;">
-              <img src="./images/img-5.jpg" alt="photo" width="360" />
+              <img src="./images/img-23.jpg" alt="photo" width="360" />
               <div class="div-li">
               <h2 class="title-img">Banking App Interface Concept</h2>
               <p class="paragraff-portfolio">App</p>
@@ -182,7 +182,7 @@
     <footer class="footer-html">
       <div class="container div-footer">
      
-      <div>
+      <div class="logo-footer-div">
          <a href="./index.html" class="link logo logo-footer"
       style="color: #4d5ae5;">Web<span class="span-footer">Studio</span></a
       >
@@ -194,10 +194,10 @@
     <div>
       <p class="paragraf-social-media">Social media</p>
       <ul class="list ul-footer">
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-4"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-5"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-6"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-7"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
       </ul>
     </div>
     </div>
