--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <ul class="list list-section">
           <li class="li-section">
           <div class="div-two">
-            <svg width="64"  height="64"><use  href="./images/symbol-defs.svg#icon-Icon-1-1"></use></svg> 
+            <svg width="64"  height="64"><use  href="./images/icons.svg#icon-antenna-1"></use></svg> 
            </div>
             <h3 class="title title-two">Strategy</h3>
             <p class="paragraf">
@@ -69,7 +69,7 @@
 
           <li class="li-section">
             <div class="div-two">
-              <svg width="64"  height="64"><use  href="./images/symbol-defs.svg#icon-Icon-2-1"></use></svg>
+              <svg width="64"  height="64"><use  href="./images/icons.svg#icon-clock-1"></use></svg>
              </div>
               <h3 class="title title-two">Punctuality</h3>
             <p class="paragraf">
@@ -80,7 +80,7 @@
           </li>
           <li class="li-section">
             <div class="div-two">
-              <svg width="64"  height="64"><use  href="./images/symbol-defs.svg#icon-Icon-3"></use></svg>
+              <svg width="64"  height="64"><use  href="./images/icons.svg#icon-diagram-1"></use></svg>
             </div>
             <h3 class="title title-two">Diligence</h3>
             <p class="paragraf">
@@ -91,7 +91,7 @@
           </li>
           <li class="li-section">
             <div class="div-two">
-              <svg width="64"  height="64"><use  href="./images/symbol-defs.svg#icon-Icon-4"></use></svg>
+              <svg width="64"  height="64"><use  href="./images/icons.svg#icon-astronaut-1"></use></svg>
             </div>
             <h3 class="title title-two">Technologies</h3>
             <p class="paragraf">
@@ -124,10 +124,10 @@
             <h3 class="title-card title-for">Mark Guerrero</h3>
             <p class="paragraff-card paragraf-four">Product Designer</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
             </ul>
           </div>
           </li>
@@ -139,25 +139,23 @@
             <h3 class="title-card title-for">Tom Ford</h3>
             <p class="paragraff-card paragraf-four">Frontend Developer</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
             </ul>
           </div>
           </li>
-      
-      
           <li class="card card-four ">
             <img src="./images/img-21.jpg" alt="photo" width="264" style="display: block"/>
           <div class="div-four">
             <h3 class="title-card title-for">Camila Garcia</h3>
             <p class="paragraff-card paragraf-four">Marketing</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
             </ul>
           </div>
           </li>
@@ -167,10 +165,10 @@
             <h3 class="title-card title-for">Daniel Wilson</h3>
             <p class="paragraff-card paragraf-four">UI Designer</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/symbol-defs.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
             </ul>
           </div>
           </li>
@@ -181,12 +179,12 @@
        <div class="container">
        <h2 class="title-five">Customers</h2>
        <ul class="list ul-five">
-      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/symbol-defs.svg#icon-Client-1"></use></svg></a></li>
-      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/symbol-defs.svg#icon-group-1"></use></svg></a></li>
-      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/symbol-defs.svg#icon-group-7"></use></svg></a></li>
-      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/symbol-defs.svg#icon-group-4"></use></svg></a></li>
-      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/symbol-defs.svg#icon-group-5"></use></svg></a></li>
-      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/symbol-defs.svg#icon-group-6"></use></svg></a></li>
+      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-Client-1"></use></svg></a></li>
+      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-1"></use></svg></a></li>
+      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-7"></use></svg></a></li>
+      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-4"></use></svg></a></li>
+      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-5"></use></svg></a></li>
+      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-6"></use></svg></a></li>
     </ul>
        </div>
       </section>
@@ -206,10 +204,10 @@
     <div>
       <p class="paragraf-social-media">Social media</p>
       <ul class="list ul-footer">
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-4"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-5"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-6"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/symbol-defs.svg#icon-Ellipse-7"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
       </ul>
     </div>
     </div>
