--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
           <li>
             <a href="./portfolio.html" class="menu link menu-li">Portfolio</a>
           </li>
-          <li><a href="" class="menu link menu-li">Contacts</a></li>
+          <li><a href="./modal.html" class="menu link menu-li">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
