--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css"  href="css/style.css">
+    <script src="modal.js"></script>
     <title>Portfolio</title>
   </head>
-
   <body class="body">
     <header class="header-html">
       <div class="container container-header">
@@ -24,7 +24,7 @@
           <li>
             <a href="./portfolio.html" class="menu link menu-li">Portfolio</a>
           </li>
-          <li><a href="" class="menu link menu-li">Contacts</a></li>
+          <li><a href="./modal.html" class="menu link menu-li">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
