--- a/modal.html
+++ b/modal.html
@@ -24,7 +24,7 @@
           <li>
             <a href="./portfolio.html" class="menu link menu-li">Portfolio</a>
           </li>
-          <li><a href="" class="menu link menu-li">Contacts</a></li>
+          <li><a href="./modal.html" class="menu link menu-li">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -50,8 +50,8 @@
         <button type="button" class="button button-style">Order Service</button>
       </div>
       <div class="modal-back">
-        <img src="./images/Modal-bg.jpg" alt="photo" width="264" />
-        <img src="./images/img-25.jpg" alt="photo" width="264"/>
+        <img src="./images/Modal-bg.jpg" alt="photo" class="background-modal"/>
+       <a href="./index.html"><img src="./images/close-1.jpg" alt="photo" class="back-button"/></a> 
       </div>
       </section>
     </body>
