--- a/modal.html
+++ b/modal.html
@@ -50,8 +50,10 @@
         <button type="button" class="button button-style">Order Service</button>
       </div>
       <div class="modal-back">
-        <img src="./images/Modal-bg.jpg" alt="photo" class="background-modal"/>
-       <a href="./index.html"><img src="./images/close-1.jpg" alt="photo" class="back-button"/></a> 
+        <ul class="list">
+      <li><img src="./images/Modal-bg.jpg" alt="photo" class="background-modal"/></li>
+       <li><a href="./index.html" class="link"><img src="./images/close-1.jpg" alt="photo" class="back-button"/></a> </li>
+    </ul>
       </div>
       </section>
     </body>
