--- a/modal.html
+++ b/modal.html
@@ -51,7 +51,7 @@
       </div>
       <div class="modal-back">
         <ul class="list">
-       <li><a href="./index.html" class="link"><img src="./images/close-1.jpg" alt="photo" class="back-button"/></a> </li>
+       <li><svg width="64"  height="64"><use  href="./images/icons.svg#icon-close"></use></svg></li>
     </ul>
       </div>
       </section>
