--- a/modal.html
+++ b/modal.html
@@ -51,7 +51,7 @@
       </div>
       <div class="modal-back">
         <ul class="list">
-       <li class="back-button"><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></li>
+       <li class=""><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></li>
     </ul>
       </div>
       </section>
