--- a/modal.html
+++ b/modal.html
@@ -51,7 +51,7 @@
       </div>
       <div class="modal-back">
         <ul class="list">
-       <li class=""><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></li>
+       <li><a class="link" href="./index.html"><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></a></li>
     </ul>
       </div>
       </section>
