--- a/modal.html
+++ b/modal.html
@@ -11,6 +11,7 @@
     <title>Portfolio</title>
   </head>
   <body class="body">
+
     <header class="header-html">
       <div class="container container-header">
       <nav class="nav-index">
@@ -55,5 +56,6 @@
     </ul>
       </div>
       </section>
+      <script src="./js/modal.js"></script>
     </body>
     </html>
