--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:ital,wght@0,400;0,500;0,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css"  href="css/style.css">
-    <script src="modal.js"></script>
     <title>Portfolio</title>
   </head>
+
   <body class="body">
     <header class="header-html">
       <div class="container container-header">
@@ -24,7 +24,7 @@
           <li>
             <a href="./portfolio.html" class="menu link menu-li">Portfolio</a>
           </li>
-          <li><a href="./modal.html" class="menu link menu-li">Contacts</a></li>
+          <li><a href="" class="menu link menu-li">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -124,10 +124,10 @@
             <h3 class="title-card title-for">Mark Guerrero</h3>
             <p class="paragraff-card paragraf-four">Product Designer</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
             </ul>
           </div>
           </li>
@@ -139,10 +139,10 @@
             <h3 class="title-card title-for">Tom Ford</h3>
             <p class="paragraff-card paragraf-four">Frontend Developer</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
             </ul>
           </div>
           </li>
@@ -152,10 +152,10 @@
             <h3 class="title-card title-for">Camila Garcia</h3>
             <p class="paragraff-card paragraf-four">Marketing</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
             </ul>
           </div>
           </li>
@@ -165,10 +165,10 @@
             <h3 class="title-card title-for">Daniel Wilson</h3>
             <p class="paragraff-card paragraf-four">UI Designer</p>
             <ul class="list ul-four">
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
-              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+              <li class="li-four-scr"><a class="link-four" href=""><svg class="svg-four" width="16" height="16"><use href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
             </ul>
           </div>
           </li>
@@ -204,10 +204,10 @@
     <div>
       <p class="paragraf-social-media">Social media</p>
       <ul class="list ul-footer">
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-4"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-5"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-6"></use></svg></a></li>
-        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-Ellipse-7"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-instagram-2"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-facebook-1"></use></svg></a></li>
+        <li class="li-footer"><a class="link-footer" href=""><svg width="24" height="24" class="svg-footer"><use href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
       </ul>
     </div>
     </div>
