--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title-eff">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="button button-style">Order Service</button>
+        <button type="button" class="button button-style" href="./modal.html">Order Service</button>
       </div>
       </section>
       <section class="section-two">
