--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title-eff">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="button button-style" href="./modal.html">Order Service</button>
+        <button type="button" class="button button-style" data-modal-open >Order Service</button>
       </div>
       </section>
       <section class="section-two">
@@ -212,7 +212,7 @@
     </div>
     </div>
     </footer> 
-      <section class="section section-one section-container" is-hidden>
+      <section class="section section-one section-container" is-hidden data-modal>
         <div class="container" visibility opacity pointer-events>
         <h1 class="title-eff">
           Effective Solutions for Your Business
@@ -221,7 +221,7 @@
       </div>
       <div class="modal-back">
         <ul class="list">
-       <li><a class="link" href="./index.html"><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></a></li>
+       <li><button></button><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button></li>
     </ul>
       </div>
       </section>
