--- a/index.html
+++ b/index.html
@@ -214,14 +214,9 @@
     </footer> 
       <section class="section section-one section-container" is-hidden data-modal>
         <div class="container" visibility opacity pointer-events>
-        <h1 class="title-eff">
-          Effective Solutions for Your Business
-        </h1>
-        <button type="button" class="button button-style">Order Service</button>
-      </div>
       <div class="modal-back">
         <ul class="list">
-       <li><button></button><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button></li>
+       <li><button><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button></li>
     </ul>
       </div>
       </section>
