--- a/index.html
+++ b/index.html
@@ -212,14 +212,11 @@
     </div>
     </div>
     </footer> 
-      <section class="section section-one section-container" is-hidden data-modal>
-        <div class="container" visibility opacity pointer-events>
-      <div class="modal-back">
-        <ul class="list">
-       <li><button><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button></li>
-    </ul>
+        <div class="backdrop is-hidden" data-modal>
+      <div class="modal">   
+      <button data-modal-close ><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button>
       </div>
-      </section>
+    </div>
       <script src="./js/modal.js"></script>
 </body>
 </html>
