--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title-eff">
           Effective Solutions for Your Business
         </h1>
-        <button data-modal-open type="button" class="button button-style">Order Service</button>
+        <button  type="button" class="button button-style data-modal-open" >Order Service</button>
       </div>
       </section>
       <section class="section-two">
@@ -212,9 +212,9 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop is-hidden" data-modal>
+        <div class="backdrop is-hidden data-modal">
       <div class="modal">   
-      <button data-modal-close ><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button>
+      <button class="data-modal-close " ><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button>
       </div>
     </div>
       <script src="./js/modal.js"></script>
