--- a/index.html
+++ b/index.html
@@ -212,12 +212,11 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop is-hidden" data-modal>
+        <div class="backdrop is-hidden" data-modal visibility opacity pointer-events>
       <div class="modal">   
       <button data-modal-close ><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button>
       </div>
     </div>
-    
       <script src="./js/modal.js"></script>
 </body>
 </html>
