--- a/index.html
+++ b/index.html
@@ -212,9 +212,12 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop"is-hidden data-modal visibility opacity pointer-events>
+        <div class="backdrop is-hidden" data-modal>
       <div class="modal">   
-      <button class="close" data-modal-close ><svg width="24"  height="24"><use  href="./images/icons.svg#icon-close"></use></svg></button>
+      <button class="close" data-modal-close >
+        <svg width="8"  height="8"><use  href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
       </div>
     </div>
       <script src="./js/modal.js"></script>
