--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title-eff">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="button button-style" data-modal-open>Order Service</button>
+        <button type="button" class="button button-style">Order Service</button>
       </div>
       </section>
       <section class="section-two">
@@ -179,7 +179,7 @@
        <div class="container">
        <h2 class="title-five">Customers</h2>
        <ul class="list ul-five">
-      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-Client-1"></use></svg></a></li>
+      <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-Logo"></use></svg></a></li>
       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-1"></use></svg></a></li>
       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-7"></use></svg></a></li>
       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-4"></use></svg></a></li>
