--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
         <div class="backdrop" visibility opacity pointer-events.>
       <div class="modal"data-modal>   
       <button class="close" data-modal-close >
-        <svg width="8"  height="8"><use  href="./images/icons.svg#icon-close"></use>
+        <svg width="32"  height="32">
+          <use  href="./images/icons.svg#icon-close"></use>
         </svg>
       </button>
       </div>
