--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop" visibility opacity pointer-events.>
+        <div class="backdrop is-hidden" visibility opacity pointer-events.>
       <div class="modal"data-modal>   
       <button class="close" data-modal-close >
         <svg width="24"  height="24">
