--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop is-hidden" visibility opacity pointer-events.>
+        <div class="backdrop is-hidden" visibility opacity pointer-events>
       <div class="modal"data-modal>   
       <button class="close" data-modal-close >
         <svg width="24"  height="24">
-          <use  href="./images/icons.svg#icon-close"></use>
+          <use  href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
       </button>
       </div>
