--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop is-hidden">
-      <div class="modal"data-modal>   
+        <div class="backdrop >
+      <div class="modal" data-modal>   
       <button class="close" data-modal-close >
         <svg width="8"  height="8">
           <use  href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
