--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop is-hidden">
+        <div class="backdrop">
       <div class="modal" data-modal>   
       <button class="close" data-modal-close >
         <svg width="8"  height="8">
