--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="title-eff">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="button button-style" 0data-modal-open>Order Service</button>
+        <button type="button" class="button button-style" data-modal-open>Order Service</button>
       </div>
       </section>
       <section class="section-two">
@@ -212,7 +212,7 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop ">
+        <div class="backdrop is-hidden">
       <div class="modal" data-modal>   
       <button class="close" data-modal-close >
         <svg width="8"  height="8">
