--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop" data-modal >  
+        <div class="backdrop is-hidden" data-modal >  
       <button class="close" data-modal-close >
         <svg width="8"  height="8">
           <use  href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
