--- a/index.html
+++ b/index.html
@@ -214,9 +214,11 @@
     </footer> 
         <div class="backdrop is-hidden" data-modal >  
       <button class="close" data-modal-close >
+        <a href="">
         <svg width="8"  height="8">
           <use  href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
+      </a>
       </button>
       </div>
       <script src="./js/modal.js"></script>
