--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
       </div>
       </section>
       <section class="section-five">
-       <div class="container">
-       <h2 class="title-five title-section">Customers</h2>
-       <ul class="list ul-five">
-        <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-Logo"></use></svg></a></li>
-        <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-1"></use></svg></a></li>
-        <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-7"></use></svg></a></li>
-        <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-4"></use></svg></a></li>
-        <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-5"></use></svg></a></li>
-        <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-6"></use></svg></a></li>
-      </ul>
-       </div>
-      </section>
+        <div class="container center">
+        <h2 class="title-five title-section">Customers</h2>
+        <ul class="list ul-five">
+       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-Logo"></use></svg></a></li>
+       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-1"></use></svg></a></li>
+       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-7"></use></svg></a></li>
+       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-4"></use></svg></a></li>
+       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-5"></use></svg></a></li>
+       <li class="li-five"><a class="link-five" href=""><svg width="104" height="56" class="svg-five"><use href="./images/icons.svg#icon-group-6"></use></svg></a></li>
+     </ul>
+        </div>
+       </section>
     </main>
     <footer class="footer-html">
       <div class="container div-footer">
