--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
     </div>
     </div>
     </footer> 
-        <div class="backdrop is-hidden" data-modal >  
+        <div class="backdrop "  > 
+          <div class="modal is-hidden" data-modal>
       <button class="close" data-modal-close >
         <a href="">
         <svg width="8"  height="8">
@@ -220,6 +221,7 @@
         </svg>
       </a>
       </button>
+    </div> 
       </div>
       <script src="./js/modal.js"></script>
 </body>
