--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         >
         <ul class="list menu-nav">
           <li>
-            <a href="./index.html" class="menu link menu-li">Studio</a>
+            <a href="./index.html" class="link menu menu-li">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="menu link menu-li">Portfolio</a>
@@ -214,12 +214,10 @@
     </footer> 
         <div class="backdrop"> 
           <div class="modal is-hidden" data-modal>
-      <button class="close" data-modal-close >
-       
+      <button class="close" data-modal-close >   
         <svg width="8"  height="8">
           <use  href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
-      
       </button>
     </div> 
       </div>
