--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         >
         <ul class="list menu-nav">
           <li>
-            <a href="./index.html" class="link menu menu-li">Studio</a>
+            <a href="./index.html" class="link menu-li">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="menu link menu-li">Portfolio</a>
+            <a href="./portfolio.html" class="link menu-li">Portfolio</a>
           </li>
-          <li><a href="" class="menu link menu-li">Contacts</a></li>
+          <li><a href="" class="link menu-li">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
