--- a/portfolio.html
+++ b/portfolio.html
@@ -73,12 +73,12 @@
           </li>
 </ul>
         <ul class="list section-list">
-          <li class="li-portfolio">
+          <li class="li-portfolio ">
             <a class="link portfolio-link" href="" style="display: block;">
               <img src="./images/img-23.jpg" alt="photo" width="360" />
               <div class="div-li">
               <h2 class="title-img">Banking App Interface Concept</h2>
-              <p class="paragraff-portfolio">App</p>
+              <p class="paragraff-portfolio overlay">App</p>
              </div>
               </a>
            
