--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </footer> 
         <div class="backdrop is-hidden" data-modal> 
           <div class="modal">
-      <button class="close" data-modal-close >   
+      <button type="button" class="close" data-modal-close >   
         <svg width="8"  height="8">
           <use  href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
