--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="backdrop is-hidden" data-modal> 
           <div class="modal">
       <button type="button" class="close" data-modal-close >   
-        <svg width="8"  height="8">
+        <svg width="8"  height="8" class="svg">
           <use  href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
       </button>
