--- a/portfolio.html
+++ b/portfolio.html
@@ -75,18 +75,24 @@
         <ul class="list section-list">
           <li class="li-portfolio ">
             <a class="link portfolio-link" href="" style="display: block;">
+              <div class="overlay-div">
               <img src="./images/img-23.jpg" alt="photo" width="360" />
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
               <div class="div-li">
               <h2 class="title-img">Banking App Interface Concept</h2>
-              <p class="paragraff-portfolio overlay">App</p>
+              <p class="paragraff-portfolio">App</p>
              </div>
               </a>
            
           </li>
           <li class="li-portfolio">
-            
             <a class="link portfolio-link" href="" style="display: block;" 
-              ><img src="./images/img-6.jpg" alt="photo" width="360" />
+              >
+              <div class="overlay-div">
+              <img src="./images/img-6.jpg" alt="photo" width="360" />
+              <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
 <div class="div-li">
               <h2 class="title-img">Cashless Payment</h2>
               <p class="paragraff-portfolio">Marketing</p>
