--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,20 @@
   <body class="body">
     <header class="header-html">
       <div class="container container-header">
-      <nav class="nav-index">
-        <a href="./index.html" class="link logo logo-nav" style="color: #4d5ae5;"
-          >Web<span class="span">Studio</span></a
-        >
-        <ul class="list menu-nav">
-          <li>
-            <a href="./index.html" class="menu link menu-li">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="menu link menu-li">Portfolio</a>
-          </li>
-          <li><a href="" class="menu link menu-li">Contacts</a></li>
-        </ul>
-      </nav>
+        <nav class="nav-index">
+          <a href="./index.html" class="link logo logo-nav" style="color: #4d5ae5;"
+            >Web<span class="span">Studio</span></a
+          >
+          <ul class="list menu-nav">
+            <li class="li-nav">
+              <a href="./index.html" class=" menu-li link">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="menu-li link">Portfolio</a>
+            </li>
+            <li><a href="" class="menu-li link">Contacts</a></li>
+          </ul>
+        </nav>
       <address class="address">
         <ul class="list adress-list">
           <li>
