--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           >Web<span class="span">Studio</span></a
         >
         <ul class="list menu-nav">
-          <li class="">
+          <li class="li-nav">
             <a href="./index.html" class=" menu-li link">Studio</a>
           </li>
           <li>
