--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
             <li class="li-nav">
               <a href="./index.html" class=" menu-li link">Studio</a>
             </li>
-            <li>
+            <li class="li-nav">
               <a href="./portfolio.html" class="menu-li link">Portfolio</a>
             </li>
-            <li><a href="" class="menu-li link">Contacts</a></li>
+            <li class="li-nav"><a href="" class="menu-li link">Contacts</a></li>
           </ul>
         </nav>
       <address class="address">
