--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         >
         <ul class="list menu-nav">
           <li class="li-nav">
-            <a href="./index.html" class=" menu-li link">Studio</a>
+            <a href="./index.html" class=" menu-li link current">Studio</a>
           </li>
           <li class="li-nav">
             <a href="./portfolio.html" class="menu-li link">Portfolio</a>
