--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
               <a href="./index.html" class=" menu-li link">Studio</a>
             </li>
             <li class="li-nav">
-              <a href="./portfolio.html" class="menu-li link">Portfolio</a>
+              <a href="./portfolio.html" class="menu-li link current">Portfolio</a>
             </li>
             <li class="li-nav"><a href="" class="menu-li link">Contacts</a></li>
           </ul>
